Convert files to Unicode.

--- a/RLECViewer/RLECViewer.rc
+++ b/RLECViewer/RLECViewer.rc
@@ -88,7 +88,7 @@ IDR_MAINFRAME           ICON    DISCARDABLE     "res\\RLECViewer.ico"
 IDD_ABOUTBOX DIALOG DISCARDABLE  0, 0, 192, 81
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About RLECViewer"
-FONT 9, "ËÎÌå"
+FONT 9, "å®‹ä½“"
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,21,21
     LTEXT           "RLECViewer Ver 2.4",IDC_STATIC,40,12,88,8,SS_NOPREFIX
@@ -104,7 +104,7 @@ STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
     WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "RLECViewer"
-FONT 9, "ËÎÌå"
+FONT 9, "å®‹ä½“"
 BEGIN
     CONTROL         "Start on Boot",IDC_CHECK_AUTORUN,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,51,68,10
@@ -121,7 +121,7 @@ END
 IDD_DIALOG_CONFIG DIALOGEX 0, 0, 242, 324
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Setting"
-FONT 9, "ËÎÌå"
+FONT 9, "å®‹ä½“"
 BEGIN
     GROUPBOX        "",IDC_STATIC,7,13,228,36
     GROUPBOX        "",IDC_STATIC,7,54,228,218
